--- a/asset/styles/index.css
+++ b/asset/styles/index.css
@@ -1,1 +1,58 @@
-/*# sourceMappingURL=index.css.map */
+@font-face {
+  font-family: "Allura";
+  src: url(../font/Allura-Regular.ttf);
+}
+@font-face {
+  font-family: "Poppins";
+  src: url(../font/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family: "Roboto";
+  src: url(../font//Roboto-Light.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  text-align: center;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+h2 {
+  font-family: Allura, sans-serif;
+  color: #a57143;
+}
+
+h1,
+h3,
+h5,
+h6,
+.phone-number {
+  font-family: Poppins, sans-serif;
+  text-transform: uppercase;
+}
+
+input {
+  position: relative;
+  border: none;
+}
+input:focus {
+  outline: none;
+}
+input::after {
+  content: "Bonjour";
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  bottom: 1px;
+  left: 0;
+  color: rgb(233, 233, 233);
+}
+
+li {
+  list-style: none;
+}/*# sourceMappingURL=index.css.map */
