--- a/asset/styles/_settings.scss
+++ b/asset/styles/_settings.scss
@@ -23,7 +23,7 @@ $black2: #21201e;
 $grey1: rgb(233, 233, 233);
 $grey2: rgb(209, 209, 209);
 $grey3: rgb(105, 105, 105);
-$copper1: #a57143;
+$copper1: rgb(163, 112, 68);
 
 * {
   margin: 0;
@@ -42,24 +42,7 @@ body {
   overflow-x: hidden;
 
 
-  &:before {
-    content: "";
-    background: black;
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: 0;
-    animation: 1.5s animBefore ease forwards;
-    animation-delay: 0.15s;
 
-    @keyframes animBefore {
-      to {
-        opacity: 0;
-        z-index: 0;
-      }
-    }
-  }
 }
 
 h2 {
