--- a/asset/styles/_settings.scss
+++ b/asset/styles/_settings.scss
@@ -17,12 +17,13 @@ $font1: Allura, sans-serif;
 $font2: Poppins, sans-serif;
 $font3: Roboto, sans-serif;
 
-$white1: rgb(243, 243, 243);
+$white1: #eeeeee;
 $black1: rgb(15, 15, 15);
 $black2: #21201e;
 $grey1: rgb(233, 233, 233);
 $grey2: rgb(209, 209, 209);
 $grey3: rgb(105, 105, 105);
+$grey4: #21201e;
 $copper1: rgb(163, 112, 68);
 
 * {
@@ -40,6 +41,7 @@ body {
   text-align: center;
   margin: 0 auto;
   overflow-x: hidden;
+  background: $grey4;
 
 
 
