--- a/asset/styles/index.css
+++ b/asset/styles/index.css
@@ -18,13 +18,14 @@
 
 a {
   text-decoration: none;
-  color: rgb(243, 243, 243);
+  color: #eeeeee;
 }
 
 body {
   text-align: center;
   margin: 0 auto;
   overflow-x: hidden;
+  background: #21201e;
 }
 
 h2 {
@@ -104,7 +105,7 @@ header .nav-container {
 }
 header .nav-container h2 {
   font-size: 3em;
-  color: rgb(243, 243, 243);
+  color: #eeeeee;
 }
 header .nav-container ul {
   display: flex;
@@ -130,7 +131,7 @@ header .text-container h2 {
 }
 header .text-container h1 {
   font-size: 4em;
-  color: rgb(243, 243, 243);
+  color: #eeeeee;
   letter-spacing: 15px;
 }
 header .text-container img {
@@ -138,14 +139,14 @@ header .text-container img {
   height: 35px;
 }
 header .text-container p {
-  color: rgb(243, 243, 243);
+  color: #eeeeee;
   text-transform: uppercase;
   font-family: Roboto, sans-serif;
   letter-spacing: 8px;
 }
 
 main .section1 {
-  background: rgb(243, 243, 243);
+  background: #eeeeee;
   display: grid;
   grid-template-columns: 50% 50%;
   height: 540px;
@@ -183,7 +184,7 @@ main .section1 .s1-left-container .border div img {
 }
 main .section1 .s1-left-container .border div span {
   font-family: Roboto, sans-serif;
-  font-weight: 900;
+  font-weight: 400;
   font-size: 1.2em;
   letter-spacing: 1px;
 }
@@ -204,4 +205,153 @@ main .section1 .s1-right-container img {
   position: absolute;
   left: 0;
   bottom: -100px;
+}
+main .section2 {
+  position: relative;
+}
+main .section2 h2 {
+  font-size: 2.5em;
+  font-weight: 500;
+  line-height: 0.5;
+  margin: 80px 0 50px;
+}
+main .section2 > span img {
+  height: 40px;
+}
+main .section2 ul {
+  width: 50%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+}
+main .section2 ul li {
+  color: #eeeeee;
+  font-family: Roboto, sans-serif;
+  font-size: 1.3em;
+  position: relative;
+}
+main .section2 ul li::after {
+  content: "";
+  position: absolute;
+  background: #eeeeee;
+  left: 0;
+  bottom: -15px;
+  height: 1px;
+  width: 100%;
+}
+main .section2 .img-bg {
+  background: url(/asset/img/bg-menu-01.jpg) center/cover no-repeat;
+  height: 750px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -150px;
+}
+main .section2 .menu {
+  background: #eeeeee;
+  width: 60%;
+  margin: 60px auto;
+  position: relative;
+  padding: 10px 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+}
+main .section2 .menu::before {
+  content: "";
+  position: absolute;
+  background: rgb(163, 112, 68);
+  height: 5px;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+main .section2 .menu .dishe {
+  align-items: center;
+  padding: 50px 20px;
+  display: grid;
+  grid-template-columns: 100px 280px 1fr;
+  position: relative;
+}
+main .section2 .menu .dishe:after {
+  content: "";
+  position: absolute;
+  background-image: linear-gradient(90deg, rgb(209, 209, 209), rgb(209, 209, 209) 75%, transparent 75%, transparent 100%);
+  background-size: 5px 1px;
+  height: 1px;
+  width: 420px;
+  transform: translateX(-50%);
+  bottom: 0;
+  left: 50%;
+}
+main .section2 .menu .dishe img {
+  border-radius: 150px;
+}
+main .section2 .menu .dishe .description {
+  text-align: left;
+  padding: 0 15px;
+}
+main .section2 .menu .dishe .description h4 {
+  font-family: Roboto, sans-serif;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+main .section2 .menu .dishe .description p {
+  font-family: Roboto, sans-serif;
+  font-size: 1.3em;
+}
+main .section2 .menu .dishe .price {
+  font-size: 1.3em;
+}
+main .booking {
+  margin: 250px auto 0;
+  width: 70%;
+  display: grid;
+  grid-template-columns: 28% 1fr;
+}
+main .booking .booking-left-container {
+  background: black;
+  padding: 30px;
+}
+main .booking .booking-left-container .border {
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='white' stroke-width='1' stroke-dasharray='4' stroke-dashoffset='5' stroke-linecap='square'/%3e%3c/svg%3e");
+}
+main .booking .booking-left-container .border .title {
+  padding: 40px 0 40px;
+}
+main .booking .booking-left-container .border .title h2 {
+  font-size: 2.8em;
+  font-weight: 500;
+  line-height: 0.5;
+}
+main .booking .booking-left-container .border .title h3 {
+  color: whitesmoke;
+  font-size: 1.7em;
+}
+main .booking .booking-left-container .border img {
+  height: 35px;
+}
+main .booking .booking-left-container .border .day {
+  padding: 40px 0 0;
+}
+main .booking .booking-left-container .border .day h3 {
+  color: rgb(163, 112, 68);
+  margin-bottom: 15px;
+  font-weight: 500;
+  font-size: 1.4em;
+}
+main .booking .booking-left-container .border .day p {
+  color: #eeeeee;
+  font-family: Roboto, sans-serif;
+}
+main .booking .booking-left-container .border .phone-number {
+  color: rgb(163, 112, 68);
+  display: block;
+  font-size: 1.5em;
+  padding: 40px 0 40px;
+}
+main .booking .booking-right-container {
+  background: #eeeeee;
 }/*# sourceMappingURL=index.css.map */
