--- a/asset/styles/layouts/_header.scss
+++ b/asset/styles/layouts/_header.scss
@@ -15,6 +15,7 @@ header {
         left: 0;
         animation: 2.5s animBefore ease-in-out forwards;
         animation-delay: 0.15s;
+        z-index: 1;
 
         @keyframes animBefore {
             to {
@@ -40,6 +41,10 @@ header {
         h2 {
             font-size: 3em;
             color: $white1;
+
+            &:hover {
+                color: $grey3;
+            }
         }
 
         ul {
@@ -64,23 +69,23 @@ header {
             font-size: 0.9em;
             position: relative;
 
+            // a:hover::after {
+            //     content: "";
+            //     position: absolute;
+            //     background: $grey3;
+            //     width: 50px;
+            //     height: 1px;
+            //     transform: translateX(-50%);
+            //     // left: 50%;
+            //     bottom: -10px;
+            // }
+
+            // a:hover {
+            //     text-decoration: underline;
+            //     text-underline-offset: 5px;
+            //     transition: 0.2s;
+            // }
         }
-
-        // a:hover {
-        //     &:after {
-        //         content: "";
-        //         position: absolute;
-        //         background: $grey3;
-        //         width: 50px;
-        //         height: 1px;
-        //         transform: translateX(-50%);
-        //         left: 50%;
-        //         bottom: -10px;
-        //     }
-        // }
-
-
-
 
         .ul-social {
             width: 10%;
