--- a/asset/styles/layouts/_main.scss
+++ b/asset/styles/layouts/_main.scss
@@ -3,7 +3,7 @@ main {
         background: $white1;
         display: grid;
         grid-template-columns: 50% 50%;
-        height: 540px;
+        // height: 540px;
 
         .s1-left-container {
 
@@ -12,7 +12,7 @@ main {
             .border {
                 // border: 2px dashed $copper1;
                 background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='rgb(165, 113, 67)' stroke-width='2' stroke-dasharray='3' stroke-dashoffset='10' stroke-linecap='square'/%3e%3c/svg%3e");
-                height: 500px;
+                min-height: 500px;
 
                 .titre {
                     padding: 40px 0 30px;
@@ -61,12 +61,15 @@ main {
                     }
 
                     p {
+                        display: block;
                         font-family: $font3;
                         text-transform: uppercase;
                         font-size: 0.9em;
                         font-weight: 600;
                         color: $grey2;
                         margin: 0;
+                        padding-bottom: 20px;
+
                     }
                 }
             }
@@ -75,7 +78,7 @@ main {
         .s1-right-container {
             // background: red;
             // background: url(../../img/store-01.jpg) center/cover no-repeat;
-            height: 540px;
+            // height: 540px;
             overflow: hidden;
             position: relative;
 
@@ -118,8 +121,15 @@ main {
                 font-family: $font3;
                 font-size: 1.3em;
                 position: relative;
+                cursor: pointer;
+                transition: 0.2s;
 
-                &::after {
+                &:hover li:not(:hover) {
+                    background: none;
+                }
+
+
+                &:first-child:after {
                     content: "";
                     position: absolute;
                     background: $white1;
@@ -128,6 +138,20 @@ main {
                     height: 1px;
                     width: 100%;
                 }
+
+
+
+                &:hover:after {
+                    content: "";
+                    position: absolute;
+                    background: $white1;
+                    left: 0;
+                    bottom: -15px;
+                    height: 1px;
+                    width: 100%;
+                }
+
+
             }
         }
 
@@ -167,7 +191,7 @@ main {
                 align-items: center;
                 padding: 50px 20px;
                 display: grid;
-                grid-template-columns: 100px 280px 1fr;
+                grid-template-columns: 22% 61% 17%;
                 position: relative;
 
                 &:after {
@@ -181,10 +205,23 @@ main {
                     transform: translateX(-50%);
                     bottom: 0;
                     left: 50%;
+
+                    @media screen and (max-width:1480px) {
+                        width: 350px;
+                    }
+
+                    @media screen and (max-width:1300px) {
+                        width: 280px;
+                    }
+
+                    @media screen and (max-width:1000px) {
+                        width: 230px;
+                    }
                 }
 
                 img {
                     border-radius: 150px;
+                    width: 100%;
                 }
 
                 .description {
@@ -343,10 +380,7 @@ main {
                         background: $white1;
                         color: $grey4;
 
-                        &:first-child:hover {
-                            background-color: red;
-                            color: red;
-                        }
+
                     }
                 }
 
